--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/prismjs": "^1.9.0",
     "node-sass": "^4.9.3",
     "parcel-bundler": "^1.9.7",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   },
   "dependencies": {
