Add npm script "www"

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "CSS flex grid, BEM compliant",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf src/index.html build .cache dist && mkdirp build",
+    "clean": "rimraf src/index.html build .cache dist www && mkdirp build",
     "doc": "node doc.js",
     "doc:watch": "node doc.js watch",
     "prestart": "npm run doc",
-    "start": "parcel src/index.html --open",
+    "start": "parcel serve src/index.html --open",
+    "prewww": "npm run doc",
+    "www": "parcel build src/index.html --out-dir www",
+    "serve": "http-server ./www",
     "css": "node-sass src/lib/bem-flex-grid.scss > build/bem-flex-grid.css",
     "css:ie11": "node-sass src/lib/bem-flex-grid.ie11.scss > build/bem-flex-grid.ie11.css",
     "css:min": "node-sass --output-style compressed src/lib/bem-flex-grid.scss > build/bem-flex-grid.min.css",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "@types/markdown-it": "0.0.6",
     "@types/prismjs": "^1.9.0",
+    "http-server": "^0.11.1",
     "markdown-it": "^8.4.2",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.9.4",
