--- a/package.json
+++ b/package.json
@@ -43,17 +43,16 @@
   "devDependencies": {
     "@types/markdown-it": "0.0.6",
     "@types/prismjs": "^1.9.0",
+    "chart.js": "^2.7.3",
     "http-server": "^0.11.1",
     "markdown-it": "^8.4.2",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.9.4",
     "parcel-bundler": "^1.10.3",
+    "primer-markdown": "^3.7.9",
+    "prismjs": "^1.15.0",
     "rimraf": "^2.6.2",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
-  },
-  "dependencies": {
-    "primer-markdown": "^3.7.9",
-    "prismjs": "^1.15.0"
   }
 }
