--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
   },
   "homepage": "https://github.com/avine/bem-flex-grid#readme",
   "devDependencies": {
+    "@types/highcharts": "^5.0.31",
     "@types/markdown-it": "0.0.6",
     "@types/prismjs": "^1.9.0",
-    "chart.js": "^2.7.3",
+    "highcharts": "^6.2.0",
     "http-server": "^0.11.1",
     "markdown-it": "^8.4.2",
     "mkdirp": "^0.5.1",
