--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bem-flex-grid",
-  "version": "0.0.1",
+  "version": "0.9.0",
   "description": "CSS flex grid, BEM compliant.",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
     "start": "parcel serve src/index.html",
     "prewww": "npm run doc",
     "www": "parcel build src/index.html --out-dir www --no-minify",
+    "www:public": "parcel build src/index.html --out-dir www/bem-flex-grid --no-minify --public-url /bem-flex-grid/",
     "serve": "http-server ./www",
     "css": "node-sass src/lib/bem-flex-grid.scss > build/bem-flex-grid.css",
     "css:ie11": "node-sass src/lib/bem-flex-grid.ie11.scss > build/bem-flex-grid.ie11.css",
