--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "CSS flex grid, BEM compliant.",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf src/index.html build .cache dist www && mkdirp build",
+    "clean": "rimraf src/index.html dist .cache output www && mkdirp dist",
     "doc": "node doc.js",
     "doc:watch": "node doc.js watch",
-    "prestart": "npm run doc",
-    "start": "parcel serve src/index.html",
-    "prewww": "npm run doc",
+    "prestart": "rimraf output && npm run doc",
+    "start": "parcel serve src/index.html --out-dir output",
+    "prewww": "rimraf www && npm run doc",
     "www": "parcel build src/index.html --out-dir www --no-minify",
+    "prewww:public": "rimraf www && npm run doc",
     "www:public": "parcel build src/index.html --out-dir www/bem-flex-grid --no-minify --public-url /bem-flex-grid/",
     "serve": "http-server ./www",
-    "css": "node-sass src/lib/bem-flex-grid.scss > build/bem-flex-grid.css",
-    "css:ie11": "node-sass src/lib/bem-flex-grid.ie11.scss > build/bem-flex-grid.ie11.css",
-    "css:min": "node-sass --output-style compressed src/lib/bem-flex-grid.scss > build/bem-flex-grid.min.css",
-    "css:min:ie11": "node-sass --output-style compressed src/lib/bem-flex-grid.ie11.scss > build/bem-flex-grid.ie11.min.css",
+    "css": "node-sass src/lib/bem-flex-grid.scss > dist/bem-flex-grid.css",
+    "css:ie11": "node-sass src/lib/bem-flex-grid.ie11.scss > dist/bem-flex-grid.ie11.css",
+    "css:min": "node-sass --output-style compressed src/lib/bem-flex-grid.scss > dist/bem-flex-grid.min.css",
+    "css:min:ie11": "node-sass --output-style compressed src/lib/bem-flex-grid.ie11.scss > dist/bem-flex-grid.ie11.min.css",
     "build": "npm run css && npm run css:min && npm run css:ie11 && npm run css:min:ie11",
     "all": "npm run clean && npm run doc && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -40,7 +41,7 @@
   "bugs": {
     "url": "https://github.com/avine/bem-flex-grid/issues"
   },
-  "homepage": "https://github.com/avine/bem-flex-grid#readme",
+  "homepage": "https://avine.io/bem-flex-grid",
   "devDependencies": {
     "@types/highcharts": "^5.0.31",
     "@types/markdown-it": "0.0.6",
