--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf src/index.html dist .cache output www deploy && mkdirp dist",
-    "doc": "node doc.js",
-    "doc:watch": "node doc.js watch",
-    "prestart": "rimraf output && npm run doc",
+    "index": "node index",
+    "index:watch": "node index watch",
+    "prestart": "rimraf output && npm run index",
     "start": "parcel serve src/index.html --out-dir output",
-    "prewww": "rimraf www && npm run doc",
+    "prewww": "rimraf www && npm run index",
     "www": "parcel build src/index.html --out-dir www --no-minify",
-    "prewww:public": "rimraf www && npm run doc",
+    "prewww:public": "rimraf www && npm run index",
     "www:public": "parcel build src/index.html --out-dir www/bem-flex-grid --no-minify --public-url /bem-flex-grid/",
     "serve": "http-server ./www",
     "css": "node-sass src/lib/bem-flex-grid.scss > dist/bem-flex-grid.css",
@@ -19,7 +19,7 @@
     "css:min": "node-sass --output-style compressed src/lib/bem-flex-grid.scss > dist/bem-flex-grid.min.css",
     "css:min:ie11": "node-sass --output-style compressed src/lib/bem-flex-grid.ie11.scss > dist/bem-flex-grid.ie11.min.css",
     "build": "npm run css && npm run css:min && npm run css:ie11 && npm run css:min:ie11",
-    "all": "npm run clean && npm run doc && npm run build",
+    "all": "npm run clean && npm run index && npm run build",
     "deploy": "npm run build && node deploy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
