Rename "www" by "docs"

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "CSS flex grid, BEM compliant.",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf src/index.html dist .cache output www deploy && mkdirp dist",
+    "clean": "rimraf src/index.html dist .cache output docs deploy && mkdirp dist",
     "index": "node index",
     "index:watch": "node index watch",
     "prestart": "rimraf output && npm run index",
     "start": "parcel serve src/index.html --out-dir output",
-    "prewww": "rimraf www && npm run index",
-    "www": "parcel build src/index.html --out-dir www --no-minify",
-    "prewww:public": "rimraf www && npm run index",
-    "www:public": "parcel build src/index.html --out-dir www/bem-flex-grid --no-minify --public-url /bem-flex-grid/",
-    "serve": "http-server ./www",
+    "predocs": "rimraf docs && npm run index",
+    "docs": "parcel build src/index.html --out-dir docs --no-minify",
+    "predocs:public": "rimraf docs && npm run index",
+    "docs:public": "parcel build src/index.html --out-dir docs/bem-flex-grid --no-minify --public-url /bem-flex-grid/",
+    "docs:serve": "http-server ./docs",
     "css": "node-sass src/lib/bem-flex-grid.scss > dist/bem-flex-grid.css",
     "css:ie11": "node-sass src/lib/bem-flex-grid.ie11.scss > dist/bem-flex-grid.ie11.css",
     "css:min": "node-sass --output-style compressed src/lib/bem-flex-grid.scss > dist/bem-flex-grid.min.css",
