Clean `package.json`

--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
     "start": "parcel serve src/index.html --out-dir output",
     "predocs": "rimraf docs && npm run index",
     "docs": "parcel build src/index.html --out-dir docs --public-url /bem-flex-grid/ --no-minify",
-    "predocs:public": "rimraf docs && npm run index",
-    "docs:public": "parcel build src/index.html --out-dir docs/bem-flex-grid --no-minify --public-url /bem-flex-grid/",
-    "docs:serve": "http-server ./docs",
     "css": "node-sass src/lib/bem-flex-grid.scss > dist/bem-flex-grid.css",
     "css:ie11": "node-sass src/lib/bem-flex-grid.ie11.scss > dist/bem-flex-grid.ie11.css",
     "css:min": "node-sass --output-style compressed src/lib/bem-flex-grid.scss > dist/bem-flex-grid.min.css",
     "css:min:ie11": "node-sass --output-style compressed src/lib/bem-flex-grid.ie11.scss > dist/bem-flex-grid.ie11.min.css",
     "build": "npm run css && npm run css:min && npm run css:ie11 && npm run css:min:ie11",
-    "all": "npm run clean && npm run index && npm run build",
+    "all": "npm run clean && npm run docs && npm run build",
     "deploy": "npm run build && node deploy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -49,7 +46,6 @@
     "@types/prismjs": "^1.9.0",
     "fs-extra": "^7.0.0",
     "highcharts": "^6.2.0",
-    "http-server": "^0.11.1",
     "markdown-it": "^8.4.2",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.9.4",
