--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bem-flex-grid",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "CSS flex grid, BEM compliant.",
   "main": "index.js",
   "scripts": {
@@ -39,7 +39,7 @@
   "bugs": {
     "url": "https://github.com/avine/bem-flex-grid/issues"
   },
-  "homepage": "https://avine.io/bem-flex-grid",
+  "homepage": "https://avine.github.io/bem-flex-grid",
   "devDependencies": {
     "@types/highcharts": "^5.0.31",
     "@types/markdown-it": "0.0.6",
