--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "css:min": "node-sass --output-style compressed src/lib/bem-flex-grid.scss > dist/bem-flex-grid.min.css",
     "css:min:ie11": "node-sass --output-style compressed src/lib/bem-flex-grid.ie11.scss > dist/bem-flex-grid.ie11.min.css",
     "build": "npm run css && npm run css:min && npm run css:ie11 && npm run css:min:ie11",
-    "all": "npm run clean && npm run docs && npm run build",
     "deploy": "npm run build && node deploy.js",
+    "all": "npm run clean && npm run docs && npm run build && node deploy.js --dry",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
