Add "-class" suffix in "./dist" css

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "start": "parcel serve src/index.html --out-dir output",
     "predocs": "rimraf docs && npm run index",
     "docs": "parcel build src/index.html --out-dir docs --public-url /bem-flex-grid/ --no-minify",
-    "css:class": "node-sass src/lib/bem-flex-grid-class.scss > dist/bem-flex-grid.css",
+    "css:class": "node-sass src/lib/bem-flex-grid-class.scss > dist/bem-flex-grid-class.css",
     "css:attr": "node-sass src/lib/bem-flex-grid-attr.scss > dist/bem-flex-grid-attr.css",
-    "css:min:class": "node-sass --output-style compressed src/lib/bem-flex-grid-class.scss > dist/bem-flex-grid.min.css",
-    "css:min:attr": "node-sass --output-style compressed src/lib/bem-flex-grid-attr.scss > dist/bem-flex-grid-attr.min.css",
-    "build": "npm run css:class && npm run css:attr && npm run css:min:class && npm run css:min:attr",
+    "css:class:min": "node-sass --output-style compressed src/lib/bem-flex-grid-class.scss > dist/bem-flex-grid-class.min.css",
+    "css:attr:min": "node-sass --output-style compressed src/lib/bem-flex-grid-attr.scss > dist/bem-flex-grid-attr.min.css",
+    "build": "npm run css:class && npm run css:attr && npm run css:class:min && npm run css:attr:min",
     "deploy": "npm run build && node deploy.js",
     "all": "npm run clean && npm run docs && npm run build && node deploy.js --dry",
     "test": "echo \"Error: no test specified\" && exit 1"
