--- a/package.json
+++ b/package.json
@@ -11,17 +11,7 @@
     "start": "parcel serve src/index.html --out-dir output",
     "predocs": "rimraf docs && npm run index",
     "docs": "parcel build src/index.html --out-dir docs --public-url /bem-flex-grid/ --no-minify",
-    "css:class": "node-sass src/lib/bem-flex-grid-class.scss > dist/bem-flex-grid-class.css",
-    "css:attr": "node-sass src/lib/bem-flex-grid-attr.scss > dist/bem-flex-grid-attr.css",
-    "css:class:ie11": "node-sass src/lib/bem-flex-grid-class.ie11.scss > dist/bem-flex-grid-class.ie11.css",
-    "css:attr:ie11": "node-sass src/lib/bem-flex-grid-attr.ie11.scss > dist/bem-flex-grid-attr.ie11.css",
-    "css:class:min": "node-sass --output-style compressed src/lib/bem-flex-grid-class.scss > dist/bem-flex-grid-class.min.css",
-    "css:attr:min": "node-sass --output-style compressed src/lib/bem-flex-grid-attr.scss > dist/bem-flex-grid-attr.min.css",
-    "css:class:ie11:min": "node-sass --output-style compressed src/lib/bem-flex-grid-class.ie11.scss > dist/bem-flex-grid-class.ie11.min.css",
-    "css:attr:ie11:min": "node-sass --output-style compressed src/lib/bem-flex-grid-attr.ie11.scss > dist/bem-flex-grid-attr.ie11.min.css",
-    "build:class": "npm run css:class && npm run css:class:ie11 && npm run css:class:min && npm run css:class:ie11:min",
-    "build:attr": "npm run css:attr && npm run css:attr:ie11 && npm run css:attr:min && npm run css:attr:ie11:min",
-    "build": "npm run build:class && npm run build:attr",
+    "build": "ts-node build",
     "deploy": "npm run build && node deploy.js",
     "all": "npm run clean && npm run docs && npm run build && node deploy.js --dry",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -48,6 +38,7 @@
   "devDependencies": {
     "@types/highcharts": "^5.0.39",
     "@types/markdown-it": "0.0.7",
+    "@types/node-sass": "^4.11.0",
     "@types/prismjs": "^1.9.1",
     "fs-extra": "^7.0.1",
     "highcharts": "^7.0.3",
@@ -58,6 +49,7 @@
     "primer-markdown": "^4.0.0",
     "prismjs": "^1.15.0",
     "rimraf": "^2.6.3",
+    "ts-node": "^8.0.3",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000"
   }
