--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf src/index.html dist .cache output docs deploy && mkdirp dist",
-    "index": "ts-node index",
-    "index:watch": "ts-node index watch",
-    "prestart": "rimraf output && npm run index",
+    "readme": "ts-node readme",
+    "readme:watch": "ts-node readme watch",
+    "prestart": "rimraf output && npm run readme",
     "start": "parcel serve src/index.html --out-dir output",
-    "predocs": "rimraf docs && npm run index",
+    "predocs": "rimraf docs && npm run readme",
     "docs": "parcel build src/index.html --out-dir docs --public-url /bem-flex-grid/ --no-minify",
     "build": "ts-node build",
     "deploy": "npm run build && ts-node deploy",
