--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "homepage": "https://avine.github.io/bem-flex-grid",
   "dependencies": {
-    "prismjs": "^1.24.1",
-    "highcharts": "^9.2.1"
+    "highcharts": "^9.2.1",
+    "prismjs": "^1.24.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-rc.0",
