--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "readme": "ts-node scripts/readme",
     "readme:watch": "ts-node scripts/readme watch",
     "prestart": "rimraf output && npm run readme",
-    "start": "parcel serve src/index.html --dist-dir output --no-hmr",
+    "start": "parcel serve src/index.html --dist-dir output",
     "predocs": "rimraf docs && npm run readme",
     "docs": "parcel build src/index.html --dist-dir docs --public-url /bem-flex-grid/ --no-optimize",
     "lint": "eslint . --ext .ts",
